force-app/main/default/objects/YearGrade__c/YearGrade__c.object-meta.xml
<CustomObject>
    <label>Year/Grade</label>
    <nameField>
        <label>Year/Grade Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Years/Grades</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>