force-app/main/default/objects/YearGrade__c/fields/Capacity__c.field-meta.xml
<CustomField>
    <fullName>Capacity__c</fullName>
    <label>Capacity</label>
    <summarizedField>Class__c.Capacity__c</summarizedField>
    <summaryForeignKey>Class__c.YearGrade__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>