force-app/main/default/objects/YearGrade__c/fields/CapacityTotal__c.field-meta.xml
<CustomField>
    <fullName>CapacityTotal__c</fullName>
    <label>Capacity Total</label>
    <summarizedField>Class__c.CapacityTotal__c</summarizedField>
    <summaryForeignKey>Class__c.YearGrade__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>