force-app/main/default/objects/YearGrade__c/fields/CapacityUsed__c.field-meta.xml
<CustomField>
    <fullName>CapacityUsed__c</fullName>
    <label>Capacity Used</label>
    <summarizedField>Class__c.CapacityUsed__c</summarizedField>
    <summaryForeignKey>Class__c.YearGrade__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>