force-app/main/default/objects/YearGrade__c/fields/CurrentEnrolledStudent__c.field-meta.xml
<CustomField>
    <fullName>CurrentEnrolledStudent__c</fullName>
    <formula>MaleCount__c + FemaleCount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Current Enrolled Student</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>