force-app/main/default/objects/YearGrade__c/fields/Curriculum__c.field-meta.xml
<CustomField>
    <fullName>Curriculum__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Curriculum</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Curriculum__c.Active__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Curriculum__c</referenceTo>
    <relationshipLabel>Years/Grades</relationshipLabel>
    <relationshipName>YearsGrades</relationshipName>
    <type>Lookup</type>
</CustomField>