force-app/main/default/objects/YearGrade__c/fields/EnrolmentPeriod__c.field-meta.xml
<CustomField>
    <fullName>EnrolmentPeriod__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Enrolment Period</label>
    <referenceTo>EnrolmentPeriod__c</referenceTo>
    <relationshipLabel>Years/Grades</relationshipLabel>
    <relationshipName>YearsGrades</relationshipName>
    <type>Lookup</type>
</CustomField>