force-app/main/default/objects/YearGrade__c/fields/FemaleCount__c.field-meta.xml
<CustomField>
    <fullName>FemaleCount__c</fullName>
    <label>Female Count</label>
    <summarizedField>Class__c.FemaleCount__c</summarizedField>
    <summaryForeignKey>Class__c.YearGrade__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>