force-app/main/default/objects/YearGrade__c/fields/iSAMSName__c.field-meta.xml
<CustomField>
    <fullName>iSAMSName__c</fullName>
    <label>iSAMS Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>