force-app/main/default/objects/YearGrade__c/fields/MaleCount__c.field-meta.xml
<CustomField>
    <fullName>MaleCount__c</fullName>
    <label>Male Count</label>
    <summarizedField>Class__c.MaleCount__c</summarizedField>
    <summaryForeignKey>Class__c.YearGrade__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>