force-app/main/default/objects/YearGrade__c/fields/NCYear__c.field-meta.xml
<CustomField>
    <fullName>NCYear__c</fullName>
    <label>NCYear</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>