force-app/main/default/objects/YearGrade__c/fields/SchoolName__c.field-meta.xml
<CustomField>
    <fullName>SchoolName__c</fullName>
    <label>School Name</label>
    <referenceTo>School__c</referenceTo>
    <relationshipLabel>Years/Grades</relationshipLabel>
    <relationshipName>Year_Groups2</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>