force-app/main/default/objects/YearGrade__c/fields/TECH_Year_Grade_Number__c.field-meta.xml
<CustomField>
    <fullName>TECH_Year_Grade_Number__c</fullName>
    <label>YearGrade Number</label>
    <length>3</length>
    <type>Text</type>
</CustomField>