force-app/main/default/objects/YearGrade__c/fields/Year_Grade_ID__c.field-meta.xml
<CustomField>
    <fullName>Year_Grade_ID__c</fullName>
    <description>the full 18 digit ID for the record for integrations</description>
    <formula>CASESAFEID(Id)</formula>
    <label>Year/Grade ID</label>
    <type>Text</type>
</CustomField>