force-app/main/default/objects/YearGrade__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>SchoolName__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>TECH_Year_Grade_Number__c</columns>
    <columns>iSAMSName__c</columns>
    <columns>NCYear__c</columns>
    <columns>EnrolmentPeriod__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>SchoolName__c</field>
        <operation>equals</operation>
        <value>Nord Anglia International School of Guangzhou</value>
    </filters>
    <label>All</label>
</ListView>