force-app/main/default/objects/YearGrade__c/listViews/Aubonne_School.listView-meta.xml
<ListView>
    <fullName>Aubonne_School</fullName>
    <columns>NAME</columns>
    <columns>Curriculum__c</columns>
    <columns>Capacity__c</columns>
    <columns>NCYear__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>SchoolName__c</field>
        <operation>contains</operation>
        <value>Aubonne</value>
    </filters>
    <label>Aubonne School</label>
    <language>en_US</language>
</ListView>