force-app/main/default/objects/YearGrade__c/listViews/Beau_Soleil_School.listView-meta.xml
<ListView>
    <fullName>Beau_Soleil_School</fullName>
    <columns>NAME</columns>
    <columns>iSAMSName__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>SchoolName__c</field>
        <operation>contains</operation>
        <value>Beau Soleil</value>
    </filters>
    <label>Beau Soleil School</label>
    <language>en_US</language>
</ListView>