force-app/main/default/objects/YearGrade__c/listViews/Houston.listView-meta.xml
<ListView>
    <fullName>Houston</fullName>
    <columns>NAME</columns>
    <columns>Capacity__c</columns>
    <columns>NCYear__c</columns>
    <columns>UPDATEDBY_USER</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>SchoolName__c</field>
        <operation>contains</operation>
        <value>Houston</value>
    </filters>
    <label>Houston</label>
</ListView>