force-app/main/default/objects/YearGrade__c/listViews/Ningbo_School.listView-meta.xml
<ListView>
    <fullName>Ningbo_School</fullName>
    <columns>NAME</columns>
    <columns>iSAMSName__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>SchoolName__c</field>
        <operation>contains</operation>
        <value>Ningbo</value>
    </filters>
    <label>Ningbo School</label>
</ListView>