force-app/main/default/objects/YearGrade__c/listViews/The_Americas.listView-meta.xml
<ListView>
    <fullName>The_Americas</fullName>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>SchoolName__c</field>
        <operation>contains</operation>
        <value>Country,metropolitan,boston,south loop</value>
    </filters>
    <label>The Americas</label>
</ListView>